tips and tricks part 3

--- a/_config.yml
+++ b/_config.yml
@@ -27,6 +27,7 @@ github_username: bkielbasa
 # Build settings
 markdown: kramdown
 theme: minima
+future: false
 plugins:
   - jekyll-feed
   - jekyll-sitemap
