--- a/.github/workflows/google.yml
+++ b/.github/workflows/google.yml
@@ -7,6 +7,8 @@ on:
 
 jobs:
   deploy:
+    runs-on: ubuntu-latest
+    steps:
     - name: Setup Hugo
       run: wget -O /tmp/hugo.deb https://github.com/gohugoio/hugo/releases/download/v0.52/hugo_0.52_Linux-64bit.deb && sudo dpkg -i /tmp/hugo.deb
     - name: build
