fix buind on hugo

--- a/.github/workflows/google.yml
+++ b/.github/workflows/google.yml
@@ -9,6 +9,7 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
+    - uses: actions/checkout@v1
     - name: Setup Hugo
       run: wget -O /tmp/hugo.deb https://github.com/gohugoio/hugo/releases/download/v0.52/hugo_0.52_Linux-64bit.deb && sudo dpkg -i /tmp/hugo.deb
     - name: build
