--- a/.github/workflows/google.yml
+++ b/.github/workflows/google.yml
@@ -1,4 +1,4 @@
-name: Build and Deploy to GKE
+name: Build and Deploy to GCS
 
 on:
   push:
@@ -18,3 +18,10 @@ jobs:
       uses: actions/gcloud/auth@master
       env:
         GCLOUD_AUTH: ${{ secrets.GOOGLE_APPLICATION_CREDENTIALS }}
+
+    - name: Upload files
+      uses: docker://gcr.io/cloud-builders/gsutil
+      with:
+        args: -m cp -r public/* developer20.com
+      env:
+        CLOUDSDK_CORE_PROJECT: ${{ secrets.GOOGLE_CLOUD_PROJECT_ID }}
