--- a/.github/workflows/google.yml
+++ b/.github/workflows/google.yml
@@ -11,7 +11,7 @@ jobs:
     steps:
     - uses: actions/checkout@v1
     - name: Setup Hugo
-      run: wget -O /tmp/hugo.deb https://github.com/gohugoio/hugo/releases/download/v0.59.1/hugo_0.59.1_Linux-64bit.deb
+      run: wget -O /tmp/hugo.deb https://github.com/gohugoio/hugo/releases/download/v0.59.1/hugo_0.59.1_Linux-64bit.deb && sudo dpkg -i /tmp/hugo.deb
     - name: build
       run: hugo
     - name: Setup Google Cloud
