--- a/.github/workflows/google.yml
+++ b/.github/workflows/google.yml
@@ -18,6 +18,7 @@ jobs:
       uses: actions-hub/gcloud@master
       env:
         APPLICATION_CREDENTIALS: ${{ secrets.GOOGLE_APPLICATION_CREDENTIALS }}
+        PROJECT_ID: ${{ secrets.GOOGLE_CLOUD_PROJECT_ID }}
 
     - name: Upload files
       uses: docker://gcr.io/cloud-builders/gsutil
