fix: add CORS headers

--- a/config.yaml
+++ b/config.yaml
@@ -25,3 +25,8 @@ outputs:
     - "html"
     - "rss"
     - "jsonfeed"
+
+headers:
+  - for: /*
+    values:
+      Access-Control-Allow-Origin: '*'
